--- a/ejercicio_07_cuadrados.ipynb
+++ b/ejercicio_07_cuadrados.ipynb
@@ -26,10 +26,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cuadrado():\n",
+    "  print(\"AAAAA\")\n",
+    "  print(\"A   A\")\n",
+    "  print(\"A   A\")\n",
+    "  print(\"A   A\")\n",
+    "  print(\"AAAAA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAAAA\n",
+      "A   A\n",
+      "A   A\n",
+      "A   A\n",
+      "AAAAA\n"
+     ]
+    }
+   ],
+   "source": [
+    "cuadrado()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -262,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
