--- a/ejercicio_07_cuadrados.ipynb
+++ b/ejercicio_07_cuadrados.ipynb
@@ -110,10 +110,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def secuencia_cuadrados(cantidad:int):\n",
+    "    for i in range(cantidad):\n",
+    "        cuadrado()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAAAA\n",
+      "A   A\n",
+      "A   A\n",
+      "A   A\n",
+      "AAAAA\n",
+      "AAAAA\n",
+      "A   A\n",
+      "A   A\n",
+      "A   A\n",
+      "AAAAA\n",
+      "AAAAA\n",
+      "A   A\n",
+      "A   A\n",
+      "A   A\n",
+      "AAAAA\n"
+     ]
+    }
+   ],
+   "source": [
+    "secuencia_cuadrados(3)"
+   ]
   },
   {
    "cell_type": "markdown",
