--- a/ejercicio_07_cuadrados.ipynb
+++ b/ejercicio_07_cuadrados.ipynb
@@ -191,6 +191,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cuadro_personalizado():\n",
+    "    a= \"AAAAA\"\n",
+    "    b= \"A   A\"\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(len(b)):\n",
+    "            cuadrado()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
