--- a/ejercicio_07_cuadrados.ipynb
+++ b/ejercicio_07_cuadrados.ipynb
@@ -26,21 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cuadrado():\n",
-    "  print(\"AAAAA\")\n",
-    "  print(\"A   A\")\n",
-    "  print(\"A   A\")\n",
-    "  print(\"A   A\")\n",
-    "  print(\"AAAAA\")"
+    "  a= (\"AAAAA\")\n",
+    "  b= (\"A   A\")\n",
+    "  print(f\"{a}\\n{b} \\n{b} \\n{b} \\n{a}\")\n",
+    "\n",
+    "def cuadrado_con_letra(letra):\n",
+    "  a= (letra * 5)\n",
+    "  b= (f\"{letra}   {letra}\")\n",
+    "  print(f\"{a}\\n{b} \\n{b} \\n{b} \\n{a}\")\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -48,15 +52,21 @@
      "output_type": "stream",
      "text": [
       "AAAAA\n",
-      "A   A\n",
-      "A   A\n",
-      "A   A\n",
-      "AAAAA\n"
+      "A   A \n",
+      "A   A \n",
+      "A   A \n",
+      "AAAAA\n",
+      "QQQQQ\n",
+      "Q   Q \n",
+      "Q   Q \n",
+      "Q   Q \n",
+      "QQQQQ\n"
      ]
     }
    ],
    "source": [
-    "cuadrado()"
+    "cuadrado()\n",
+    "cuadrado_con_letra('Q')"
    ]
   },
   {
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -129,19 +139,19 @@
      "output_type": "stream",
      "text": [
       "AAAAA\n",
-      "A   A\n",
-      "A   A\n",
-      "A   A\n",
+      "A   A \n",
+      "A   A \n",
+      "A   A \n",
       "AAAAA\n",
       "AAAAA\n",
-      "A   A\n",
-      "A   A\n",
-      "A   A\n",
+      "A   A \n",
+      "A   A \n",
+      "A   A \n",
       "AAAAA\n",
       "AAAAA\n",
-      "A   A\n",
-      "A   A\n",
-      "A   A\n",
+      "A   A \n",
+      "A   A \n",
+      "A   A \n",
       "AAAAA\n"
      ]
     }
@@ -192,24 +202,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cuadro_personalizado():\n",
-    "    a= \"AAAAA\"\n",
-    "    b= \"A   A\"\n",
-    "    for i in range(len(a)):\n",
-    "        for j in range(len(b)):\n",
-    "            cuadrado()"
+    "def cuadrado_personalizado(letra):\n",
+    "  a= (letra * 5)\n",
+    "  b= (f\"{letra}   {letra}\")\n",
+    "  print(f\"{a}\\n{b} \\n{b} \\n{b} \\n{a}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HHHHH\n",
+      "H   H \n",
+      "H   H \n",
+      "H   H \n",
+      "HHHHH\n"
+     ]
+    }
+   ],
+   "source": [
+    "cuadrado_personalizado(\"H\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,6 +276,65 @@
     "a a a a a\n",
     "</p>\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sopa_cuadrados(nombre):\n",
+    "  for letra in nombre:\n",
+    "    a= (letra * 5)\n",
+    "    b= (f\"{letra}   {letra}\")\n",
+    "    print(f\"{a}\\n{b} \\n{b} \\n{b} \\n{a}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GGGGG\n",
+      "G   G \n",
+      "G   G \n",
+      "G   G \n",
+      "GGGGG\n",
+      "IIIII\n",
+      "I   I \n",
+      "I   I \n",
+      "I   I \n",
+      "IIIII\n",
+      "SSSSS\n",
+      "S   S \n",
+      "S   S \n",
+      "S   S \n",
+      "SSSSS\n",
+      "EEEEE\n",
+      "E   E \n",
+      "E   E \n",
+      "E   E \n",
+      "EEEEE\n",
+      "LLLLL\n",
+      "L   L \n",
+      "L   L \n",
+      "L   L \n",
+      "LLLLL\n",
+      "AAAAA\n",
+      "A   A \n",
+      "A   A \n",
+      "A   A \n",
+      "AAAAA\n"
+     ]
+    }
+   ],
+   "source": [
+    "sopa_cuadrados(\"GISELA\")"
    ]
   },
   {
@@ -342,6 +423,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (2702788360.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[87], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i in range(len(a) 0, dimension,-1):\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cuadrado_variable(dimension):\n",
+    "   n-2\n",
+    "   n   \n",
+    "   cuadrado()\n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[84], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cuadrado_variable(\u001b[38;5;241m5\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[82], line 2\u001b[0m, in \u001b[0;36mcuadrado_variable\u001b[1;34m(dimension)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcuadrado_variable\u001b[39m(dimension:\u001b[38;5;28mint\u001b[39m):\n\u001b[1;32m----> 2\u001b[0m    \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(dimension)):\n\u001b[0;32m      3\u001b[0m     cuadrado()\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "cuadrado_variable(5)"
+   ]
   }
  ],
  "metadata": {
