--- a/ejercicio_07_cuadrados.ipynb
+++ b/ejercicio_07_cuadrados.ipynb
@@ -426,47 +426,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (2702788360.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[87], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i in range(len(a) 0, dimension,-1):\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def cuadrado_variable(dimension):\n",
-    "   n-2\n",
-    "   n   \n",
-    "   cuadrado()\n",
+    "def cuadrado_variable(n):\n",
+    "   a= (\"A\" * n)\n",
+    "   \n",
+    "   if n == 0:\n",
+    "      print(\"None\")\n",
+    "   elif n ==1:\n",
+    "      print(a)\n",
+    "   elif n ==2: \n",
+    "      print(a)\n",
+    "      print(a)\n",
+    "   else:\n",
+    "      b= 'A'+ (n-2)*\" \" + 'A'\n",
+    "      print(a)\n",
+    "      for i in range(n-2):\n",
+    "         print(b)\n",
+    "      print(a)\n",
+    "           \n",
+    " \n",
     "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[84], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cuadrado_variable(\u001b[38;5;241m5\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[82], line 2\u001b[0m, in \u001b[0;36mcuadrado_variable\u001b[1;34m(dimension)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcuadrado_variable\u001b[39m(dimension:\u001b[38;5;28mint\u001b[39m):\n\u001b[1;32m----> 2\u001b[0m    \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(dimension)):\n\u001b[0;32m      3\u001b[0m     cuadrado()\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAA\n",
+      "A A\n",
+      "AAA\n"
      ]
     }
    ],
    "source": [
-    "cuadrado_variable(5)"
+    "cuadrado_variable(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
